--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,10 @@
     <a href="#teaching" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Teaching</a>
     <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Projects</a>
   </div>
-  <br>
-  <br>
 
  <!-- Main Content -->
   <a id="home"></a>
+  <br>
   <table style="width:100%;max-width:1100px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:0px">
       <td style="padding:0px">
@@ -54,13 +53,14 @@
                 Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the  Georgia Institute of Technology.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
                 My research interests lie in robot learning, human-robot collaboration, optimization, continual learning, data-efficient machine learning, and computer vision.
-                Feel free to reach out for collaborations or to discuss research. My official legal name is Abulikemu Abuduweili, but I also go by Abduwali or Abu.
               </p>
               <p> I have also gained valuable industry experience through internships at several organizations.
                  In the summer of 2024, I worked on Visual Representation Learning for Robotics at  <a href="https://www.microsoft.com/en-us/research/group/applied-robotics-research/">Microsoft Research Redmond</a>, collaborating with <a href="https://scriptedonachip.com/about">Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Naoki Wake</a>.
                  During the summer of 2023, I focused on Diffusion Models at the <a href="https://www.tri.global/">Toyota Research Institute</a>, where I worked closely with <a href="https://www.mit.edu/~fperment/">Frank Permenter</a> and <a href="https://www.chenyang.co/">Chenyang Yuan</a>.
                 Before 2021, I conducted a research internship at  <a href="https://research.baidu.com/">Baidu Research</a> under the guidance of <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>.
                 I also completed a research internship at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/?msockid=12d145ad420660d9392f51d4439f617e">Microsoft Research Asia</a>, collaborating  with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>.
+              </p>
+              <p> Feel free to reach out for collaborations or to discuss research. My official name is Abulikemu Abuduweili, but I also go by Abduwali or Abu.
               </p>
               <p style="color: red;">I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
               </p>
