--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
 <body>
   <!-- Navigation Bar -->
-  <div style="width:100%; background: linear-gradient(90deg, #FFB385, #FFD28E); text-align: center; padding: 10px 0; position: fixed; top: 0; z-index: 1000;">
+  <div style="width:100%; background: rgba(255, 218, 185, 0.8); text-align: center; padding: 10px 0; position: fixed; top: 0; z-index: 1000;">
     <a href="/" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Abulikemu Abuduweili</a>
     <a href="#home" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Home</a>
     <a href="#research" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Research</a>
