--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
                 Before 2021, I conducted a research internship at  <a href="https://research.baidu.com/">Baidu Research</a> under the guidance of <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>.
                 I also completed a research internship at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/?msockid=12d145ad420660d9392f51d4439f617e">Microsoft Research Asia</a>, collaborating  with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>.
               </p>
-              <p> Feel free to reach out for collaborations or to discuss research. My official name is Abulikemu Abuduweili, but I also go by Abduwali or Abu.
+              <p> Feel free to reach out for collaborations or to discuss research. My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>.
               </p>
               <p style="color: red;">I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
               </p>
