--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
               <p>
                 I am a PhD candidate in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
                 at Carnegie Mellon University. I am fortunate to be advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
-                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the  Georgia Institute of Technology.
+                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the University of Oregon.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
                 My research interests lie in robot learning, human-robot collaboration, optimization, continual learning, data-efficient machine learning, and computer vision.
               </p>
@@ -145,6 +145,9 @@
               {% if post.youtube %}
               <a href="{{post.youtube}}">youtube</a> /
               {% endif %}
+              {% if post.blog %}
+              <a href="{{post.blog}}">blog</a> /
+              {% endif %}
               {% if post.news %}
               <a href="{{post.news}}">news</a> /
               {% endif %}
@@ -208,7 +211,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Teaching</h2>
-              <p>Teaching assistant for <a href="https://18661.github.io/">18-661: Introduction to Machine Learning for Engineers (CMU)</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/chi-yuejie.html">Prof. Yuejie Chi</a>.
+              <p>Teaching assistant for <a href="https://18661.github.io/">18-661: Introduction to Machine Learning for Engineers (CMU)</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/chi-yuejie.html">Prof. Yuejie Chi</a> and <a href="https://www.andrew.cmu.edu/user/beidic/">Prof. Beidi Chen</a>.
               </p>
               <p>Teaching assistant for <a href="https://18-786.github.io/">18-786: Introduction to Deep Learning (CMU)</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/sankaranarayanan-aswin.html">Prof. Aswin Sankaranarayanan</a>.
               </p>
