--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     <a href="#research" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Research</a>
     <a href="#service" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Service</a>
     <a href="#teaching" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Teaching</a>
-    <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Projects</a>
+    <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Misc</a>
   </div>
 
  <!-- Main Content -->
