--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in the intersection of robotics and machine learning, with a focus on areas such as robot learning, human-robot collaboration, optimization, continual learning, data-efficient learning, time-series prediction, and robot vision.
+                I'm broadly interested in the intersection of robotics and machine learning, with a focus on areas such as robot learning, human-robot collaboration, optimization, continual learning, data-efficient learning, time-series prediction, test-time adaptation, and robot vision.
                 Below is a list of my research works  (* denotes equal contribution). Some papers are <span class="highlight">highlighted</span>. For a full publication list, please visit my <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ">Google Scholar</a>.
               </p>
             </td>
