--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -229,7 +229,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Side Research</h2>
-              <p> During my master's studies, I gained research experience in optics and lasers. Additionally, I have been involved in collaborative projects that explore the intersection of AI and medicine. Below are some of the papers I have contributed to.
+              <p> Except researching AI, I gained research experience in optics and lasers, especially in my master's studies. Below are some of the papers (without AI) I have contributed to.
               </p>
             </td>
           </tr>
@@ -379,6 +379,21 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
+        </table>
+
+        <!-- Hobby Section -->
+        <br>
+        <br>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Personal Stuff</h2>
+              <p> I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries and limitless possibilities.
+              </p>
+              <p> Outside of work, I enjoy football (Soccer in the U.S.), traveling, and playing board games.
+              </p>
+            </td>
+          </tr>
         </table>
 
         <br>
