--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -229,7 +229,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Side Research</h2>
-              <p> Except researching AI, I gained research experience in optics and lasers, especially in my master's studies. Below are some of the papers (without AI) I have contributed to.
+              <p> Apart from my research in AI, I have also gained substantial experience in optics and lasers, particularly during my master's studies. Below are some of the papers I have contributed to that focus on topics outside of AI.
               </p>
             </td>
           </tr>
@@ -388,7 +388,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Personal Stuff</h2>
-              <p> I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries and limitless possibilities.
+              <p> I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries.
               </p>
               <p> Outside of work, I enjoy football (Soccer in the U.S.), traveling, and playing board games.
               </p>
