--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -390,7 +390,7 @@
               <h2>Personal Stuff</h2>
               <p> I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries.
               </p>
-              <p> Outside of work, I enjoy football (Soccer in the U.S.), traveling, and playing board games.
+              <p> Outside of work, I enjoy football (Soccer), traveling, and playing board games.
               </p>
             </td>
           </tr>
