--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,16 +52,15 @@
                 at Carnegie Mellon University. I am fortunate to be advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
                 Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the University of Oregon.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
-                My research interests lie in robot learning, human-robot collaboration, optimization, continual learning, data-efficient machine learning, and computer vision.
+                My research focuses on machine learning, robotics, and computer vision.
               </p>
-              <p> I have also gained valuable industry experience through internships at several organizations.
-                 In the summer of 2024, I worked on Visual Representation Learning for Robotics at  <a href="https://www.microsoft.com/en-us/research/group/applied-robotics-research/">Microsoft Research Redmond</a>, collaborating with <a href="https://scriptedonachip.com/about">Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Naoki Wake</a>.
-                 During the summer of 2023, I focused on Diffusion Models at the <a href="https://www.tri.global/">Toyota Research Institute</a>, where I worked closely with <a href="https://www.mit.edu/~fperment/">Frank Permenter</a> and <a href="https://www.chenyang.co/">Chenyang Yuan</a>.
-                Before 2021, I conducted a research internship at  <a href="https://research.baidu.com/">Baidu Research</a> under the guidance of <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>.
-                I also completed a research internship at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/?msockid=12d145ad420660d9392f51d4439f617e">Microsoft Research Asia</a>, collaborating  with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>.
+              <p>
+                I gained industry experience through internships at Microsoft Research Redmond (with <a href="https://scriptedonachip.com/about">Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Naoki Wake</a>), Toyota Research Institute (with <a href="https://www.mit.edu/~fperment/">Frank Permenter</a> and <a href="https://www.chenyang.co/">Chenyang Yuan</a>), Baidu Research (under <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>), and Microsoft Research Asia (with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>).
+              Feel free to reach out for collaborations or to discuss research.
               </p>
-              <p> Feel free to reach out for collaborations or to discuss research. My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>.
-              </p>
+<!--              <p> -->
+<!--                My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>.-->
+<!--              </p>-->
               <p style="color: red;">I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
               </p>
               <p style="text-align:center">
@@ -87,8 +86,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in the intersection of robotics and machine learning, with a focus on areas such as robot learning, human-robot collaboration, optimization, continual learning, data-efficient learning, time-series prediction, test-time adaptation, and robot vision.
-                Below is a list of my research works  (* denotes equal contribution). Some papers are <span class="highlight">highlighted</span>. For a full publication list, please visit my <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ">Google Scholar</a>.
+                I'm broadly interested in the intersection of robotics and machine learning, with a focus on areas such as continual learning, robot learning, human-robot collaboration, optimization,  data-efficient learning, time-series prediction, test-time adaptation, visual perception, and generative models.
+                Below is a list of my research works  (* denotes equal contribution), with some papers <span class="highlight">highlighted</span>.  For the full list of publications, please visit my <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ">Google Scholar</a>.
               </p>
             </td>
           </tr>
