--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,12 +50,12 @@
               <p>
                 I am a PhD candidate in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
                 at Carnegie Mellon University. I am fortunate to be advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
-                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the University of Oregon.
+                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a>.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
                 My research focuses on Machine Learning, Robotics, Embodied AI, and Computer Vision.
               </p>
               <p>
-                I gained industry experience through internships at Microsoft Research Redmond (with <a href="https://scriptedonachip.com/about">Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Naoki Wake</a>), Toyota Research Institute (with <a href="https://www.mit.edu/~fperment/">Frank Permenter</a> and <a href="https://www.chenyang.co/">Chenyang Yuan</a>), Baidu Research (under <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>), and Microsoft Research Asia (with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>).
+                I gained industry experience through internships at Microsoft Research Redmond (with <a href="https://scriptedonachip.com/about">Dr. Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Dr. Naoki Wake</a>), Toyota Research Institute (with <a href="https://www.mit.edu/~fperment/">Dr. Frank Permenter</a> and <a href="https://www.chenyang.co/">Dr. Chenyang Yuan</a>), Baidu Research (under <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>), and Microsoft Research Asia (with <a href="https://www.microsoft.com/en-us/research/people/qlin/">Dr. Qingwei Lin</a>).
               Feel free to reach out for collaborations or to discuss research.
               </p>
 <!--              <p> -->
