--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -391,6 +391,12 @@
               </p>
               <p> Outside of work, I enjoy football (Soccer), traveling, and playing board games.
               </p>
+              <p style="text-align: center; font-style: italic;">
+                Along life’s road I have always sought truth,<br>
+                In the search for verity, thought was always my guide.<br>
+                My heart yearned without end for a chance of expression,<br>
+                And longed to find words of meaning and grace.
+            </p>
             </td>
           </tr>
         </table>
