--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -391,7 +391,8 @@
               </p>
               <p> Outside of work, I enjoy football (Soccer), traveling, and playing board games.
               </p>
-              <p style="text-align: center; font-style: italic;">
+              <p></p>
+              <p style="text-align: left; font-style: italic;">
                 Along life’s road I have always sought truth,<br>
                 In the search for verity, thought was always my guide.<br>
                 My heart yearned without end for a chance of expression,<br>
