--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,8 @@
     <a href="#research" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Research</a>
     <a href="#service" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Service</a>
     <a href="#teaching" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Teaching</a>
-    <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Misc</a>
+    <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Side Project</a>
+    <a href="#misc" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Misc</a>
   </div>
 
  <!-- Main Content -->
@@ -381,6 +382,7 @@
         </table>
 
         <!-- Hobby Section -->
+        <a id="misc"></a>
         <br>
         <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
