--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,9 +96,15 @@
         Dynamic Architecture (<a href="https://arxiv.org/abs/2411.14321">arXiv 2024-1</a>),
         Model Adaptation and Test-time Adaptation (<a href="https://proceedings.mlr.press/v229/abuduweili23a">CoRL 2023</a>, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198">ACSP 2021</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>)
     </li>
+            <li>
+        <strong>Data-efficient Learning:</strong>
+        Semi/self-supervised Learning (<a href="https://doi.org/10.1016/j.patcog.2023.109831">PR 2023</a>, <a href="https://openaccess.thecvf.com/content/CVPR2021/html/Abuduweili_Adaptive_Consistency_Regularization_for_Semi-Supervised_Transfer_Learning_CVPR_2021_paper.html">CVPR 2021</a>),
+        Transfer Learning (<a href="https://doi.org/10.1016/j.patcog.2023.109831">PR 2023</a>, <a href="https://openaccess.thecvf.com/content/CVPR2021/html/Abuduweili_Adaptive_Consistency_Regularization_for_Semi-Supervised_Transfer_Learning_CVPR_2021_paper.html">CVPR 2021</a>),
+        Few-shot Learning (<a href="https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html">NeurIPS 2021</a>)
+    </li>
     <li>
         <strong>Robot Learning:</strong>
-        Human-robot Collaboration (<a href="https://arxiv.org/abs/2412.05488">arXiv 2024-2</a>, <a href="https://ieeexplore.ieee.org/abstract/document/10252579">CCTA 2023</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>),
+        Human-robot Collaboration (<a href="https://arxiv.org/abs/2411.15711">arXiv 2024-2</a>, <a href="https://ieeexplore.ieee.org/abstract/document/10252579">CCTA 2023</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>),
         SLAM (<a href="https://ieeexplore.ieee.org/abstract/document/10242249">T-RO 2023</a>, <a href="https://arxiv.org/abs/2405.04812">arXiv 2022</a>),
         Manipulation (<a href="https://openreview.net/forum?id=A6ikGJRaKL">CoRL 2024</a>),
         Locomotion (<a href="https://arxiv.org/abs/2411.14321">arXiv 2024-1</a>),
@@ -110,16 +116,10 @@
         Certified Training (<a href="https://openreview.net/forum?id=iV0jktFZ5Y">TMLR 2024</a>),
         Safe Control (<a href="https://ieeexplore.ieee.org/abstract/document/10252579">CCTA 2023</a>)
     </li>
-    <li>
-        <strong>Data-efficient Learning:</strong>
-        Semi/self-supervised Learning (<a href="https://doi.org/10.1016/j.patcog.2023.109831">PR 2023</a>, <a href="https://openaccess.thecvf.com/content/CVPR2021/html/Abuduweili_Adaptive_Consistency_Regularization_for_Semi-Supervised_Transfer_Learning_CVPR_2021_paper.html">CVPR 2021</a>),
-        Transfer Learning (<a href="https://doi.org/10.1016/j.patcog.2023.109831">PR 2023</a>, <a href="https://openaccess.thecvf.com/content/CVPR2021/html/Abuduweili_Adaptive_Consistency_Regularization_for_Semi-Supervised_Transfer_Learning_CVPR_2021_paper.html">CVPR 2021</a>),
-        Few-shot Learning (<a href="https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html">NeurIPS 2021</a>)
-    </li>
-    <li>
-        <strong>Neural Network Architecture:</strong>
-        Transformer (<a href="https://arxiv.org/abs/2104.05704">arXiv 2021</a>),
-        Graph Neural Networks (<a href="https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html">NeurIPS 2021</a>)
+        <li>
+        <strong>Optimization:</strong>
+        Adaptive Gradient Method (<a href="https://arxiv.org/abs/2412.02153">OPT 2024</a>),
+        Extended Kalman Filter (<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198">ACSP 2021</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>)
     </li>
     <li>
         <strong>Generative Models:</strong>
@@ -127,10 +127,10 @@
         LLM and RAG (<a href="https://www.medrxiv.org/content/10.1101/2024.07.10.24310247v2">medRxiv 2024</a>),
         LSTM Decoder (<a href="https://aclanthology.org/P19-2032/">ACL-SRW 2019</a>)
     </li>
-    <li>
-        <strong>Optimization:</strong>
-        Adaptive Gradient Method (<a href="https://arxiv.org/abs/2412.02153">OPT 2024</a>),
-        Extended Kalman Filter (<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198">ACSP 2021</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>)
+        <li>
+        <strong>Neural Network Architecture:</strong>
+        Transformer (<a href="https://arxiv.org/abs/2104.05704">arXiv 2021</a>),
+        Graph Neural Networks (<a href="https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html">NeurIPS 2021</a>)
     </li>
 </ul>
               <p></p>
@@ -437,11 +437,9 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Personal Stuff</h2>
-              <p> I speak Uyghur, Chinese, and English.  My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>.-->
-              </p>
-              <p> I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries.
-              </p>
-              <p> Outside of work, I enjoy football (Soccer), traveling, and playing board games.
+              <p> I speak Uyghur, Chinese, and English.  My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>. <br>
+              I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries. <br>
+              Outside of work, I enjoy football (Soccer), traveling, and playing board games.
               </p>
               <p></p>
               <p style="text-align: left; font-style: italic;">
