--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,7 +108,7 @@
         SLAM (<a href="https://ieeexplore.ieee.org/abstract/document/10242249">T-RO 2023</a>, <a href="https://arxiv.org/abs/2405.04812">arXiv 2022</a>),
         Manipulation (<a href="https://openreview.net/forum?id=A6ikGJRaKL">CoRL 2024</a>),
         Locomotion (<a href="https://arxiv.org/abs/2411.14321">arXiv 2024-1</a>),
-        Motion/Behavior Prediction (<a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>)
+        Motion/Behavior Prediction (<a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>),
         Reinforcement Learning (<a href="https://openreview.net/forum?id=61TKzU9B96">TMLR 2023</a>)
     </li>
     <li>
