--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
         <strong>Generative Models:</strong>
         Diffusion Models (<a href="https://arxiv.org/abs/2412.05488">arXiv 2024-3</a>),
         LLM and RAG (<a href="https://www.medrxiv.org/content/10.1101/2024.07.10.24310247v2">medRxiv 2024</a>),
-        LSTM Decoder (<a href="https://aclanthology.org/P19-2032/">ACL-SRW 2019</a>)
+        Encoder-Decoder (<a href="https://aclanthology.org/P19-2032/">ACL-SRW 2019</a>)
     </li>
         <li>
         <strong>Neural Network Architecture:</strong>
