--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
 <p>
-    I am broadly interested in the intersection of robotics and machine learning. Below are the topics I contribute to, along with references to related works. (Some papers cover multiple topics.)
+    I am broadly interested in the intersection of robotics and machine learning, with a particular focus on advancing lifelong, efficient, and robust learning and autonomy. Below are the topics I contribute to, along with references to related works. (Some papers cover multiple topics.)
 </p>
 <ul>
     <li>
