--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -439,7 +439,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Personal Stuff</h2>
-              <p> I speak Uyghur, Chinese, and English.  My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>. <br>
+              <p> I speak Uyghur, Chinese, and English.  My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌɑb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>. <br>
               I am deeply fascinated by Machine Learning, driven by the dream of achieving General AI to enhance life for everyone. Physics, especially Optics, captivates me with its profound mysteries. <br>
               Outside of work, I enjoy football (Soccer), traveling, and playing board games.
               </p>
