--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,8 +62,8 @@
 <!--              <p> -->
 <!--                My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>.-->
 <!--              </p>-->
-              <p style="color: red;">I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
-              </p>
+<!--              <p style="color: red;">I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.-->
+<!--              </p>-->
               <p style="text-align:center">
                 <a href="https://www.ri.cmu.edu/ri-people/abulikemu-abuduweili-2/">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/Walleclipse">GitHub</a> &nbsp;/&nbsp;
