--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,15 +49,14 @@
                 Abulikemu  Abuduweili
               </h1>
               <p>
-                I am a PhD candidate in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
-                at Carnegie Mellon University. I am fortunate to be advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
+                I am a Researcher in Robotics at Apple, and I earned my Ph.D. in Electrical and Computer Engineering from Carnegie Mellon University.
+                I was advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
                 Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a>.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
-                My research focuses on Machine Learning, Robotics, Embodied AI, and Computer Vision.
+                I have also accumulated valuable industry experience through internships at Microsoft Research Redmond, Toyota Research Institute, Baidu Research, and Microsoft Research Asia.
               </p>
               <p>
-                I gained industry experience through internships at Microsoft Research Redmond (with <a href="https://scriptedonachip.com/about">Dr. Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Dr. Naoki Wake</a>), Toyota Research Institute (with <a href="https://www.mit.edu/~fperment/">Dr. Frank Permenter</a> and <a href="https://www.chenyang.co/">Dr. Chenyang Yuan</a>), Baidu Research (under <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>), and Microsoft Research Asia (with <a href="https://www.microsoft.com/en-us/research/people/qlin/">Dr. Qingwei Lin</a>).
-              Feel free to reach out for collaborations or to discuss research.
+                My research focuses on Machine Learning, Robotics, Embodied AI, and Computer Vision.
               </p>
 <!--              <p> -->
 <!--                My official name is Abulikemu Abuduweili, but I also go by Abduwali <span style="font-family: 'serif';">/ˌæb du wæ li/</span> or Abu <span style="font-family: 'serif';">/ˈɑ bu/</span>.-->
@@ -68,7 +67,7 @@
                 <a href="https://www.ri.cmu.edu/ri-people/abulikemu-abuduweili-2/">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/Walleclipse">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/1cL-gzPteHRidSNOLHphGE02Iitv1LyjU/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+                <!--  <a href="https://drive.google.com/file/d/1cL-gzPteHRidSNOLHphGE02Iitv1LyjU/view?usp=drive_link">CV</a> &nbsp;/&nbsp; -->
                 <a href="https://www.linkedin.com/in/abulikemu-abuduweili-9305b0171/"> LinkedIn </a>
               </p>
             </td>
