--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,18 +121,18 @@
         Adaptive Gradient Method (<a href="https://arxiv.org/abs/2412.02153">OPT 2024</a>),
         Extended Kalman Filter (<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198">ACSP 2021</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>)
     </li>
-    <li>
-        <strong>Generative Models:</strong>
-        Diffusion Models (<a href="https://arxiv.org/abs/2412.05488">arXiv 2024-3</a>),
-        GAN (<a href="https://ieeexplore.ieee.org/abstract/document/10242249">T-RO 2023</a>),
-        LLM and RAG (<a href="https://www.medrxiv.org/content/10.1101/2024.07.10.24310247v2">medRxiv 2024</a>),
-        Encoder-Decoder (<a href="https://aclanthology.org/P19-2032/">ACL-SRW 2019</a>)
-    </li>
-        <li>
-        <strong>Neural Network Architecture:</strong>
-        Transformer (<a href="https://arxiv.org/abs/2104.05704">arXiv 2021</a>),
-        Graph Neural Networks (<a href="https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html">NeurIPS 2021</a>)
-    </li>
+<!--    <li>-->
+<!--        <strong>Generative Models:</strong>-->
+<!--        Diffusion Models (<a href="https://arxiv.org/abs/2412.05488">arXiv 2024-3</a>),-->
+<!--        GAN (<a href="https://ieeexplore.ieee.org/abstract/document/10242249">T-RO 2023</a>),-->
+<!--        LLM and RAG (<a href="https://www.medrxiv.org/content/10.1101/2024.07.10.24310247v2">medRxiv 2024</a>),-->
+<!--        Encoder-Decoder (<a href="https://aclanthology.org/P19-2032/">ACL-SRW 2019</a>)-->
+<!--    </li>-->
+<!--        <li>-->
+<!--        <strong>Neural Network Architecture:</strong>-->
+<!--        Transformer (<a href="https://arxiv.org/abs/2104.05704">arXiv 2021</a>),-->
+<!--        Graph Neural Networks (<a href="https://proceedings.neurips.cc/paper_files/paper/2021/hash/91bc333f6967019ac47b49ca0f2fa757-Abstract.html">NeurIPS 2021</a>)-->
+<!--    </li>-->
 </ul>
               <p></p>
               <p>
