--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
     <li>
         <strong>Continual Learning:</strong>
         Memory-replay (<a href="https://ieeexplore.ieee.org/abstract/document/10242249">T-RO 2023</a>, <a href="https://proceedings.mlr.press/v229/abuduweili23a">CoRL 2023</a>),
-        Dynamic Architecture (<a href="https://arxiv.org/abs/2411.14321">arXiv 2024-1</a>),
+        Dynamic Architecture (<a href="https://proceedings.mlr.press/v283/li25b.html">L4DC 2025</a>),
         Model Adaptation and Test-time Adaptation (<a href="https://proceedings.mlr.press/v229/abuduweili23a">CoRL 2023</a>, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198">ACSP 2021</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>)
     </li>
             <li>
@@ -103,11 +103,11 @@
     </li>
     <li>
         <strong>Robot Learning:</strong>
-        Human-robot Collaboration (<a href="https://arxiv.org/abs/2411.15711">arXiv 2024-2</a>, <a href="https://ieeexplore.ieee.org/abstract/document/10252579">CCTA 2023</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>),
+        Human-robot Collaboration (<a href="https://arxiv.org/abs/2411.15711">arXiv 2024</a>, <a href="https://ieeexplore.ieee.org/abstract/document/10252579">CCTA 2023</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>),
         Motion/Behavior Prediction (<a href="https://proceedings.mlr.press/v229/abuduweili23a">CoRL 2023</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>, <a href="https://arxiv.org/abs/1909.05089">AI-HRI 2019</a>),
         SLAM (<a href="https://ieeexplore.ieee.org/abstract/document/10242249">T-RO 2023</a>, <a href="https://arxiv.org/abs/2405.04812">arXiv 2022</a>),
         Manipulation (<a href="https://openreview.net/forum?id=A6ikGJRaKL">CoRL 2024</a>),
-        Locomotion (<a href="https://arxiv.org/abs/2411.14321">arXiv 2024-1</a>),
+        Locomotion (<a href="https://proceedings.mlr.press/v283/li25b.html">L4DC 2025</a>),
         Reinforcement Learning (<a href="https://openreview.net/forum?id=61TKzU9B96">TMLR 2023</a>)
     </li>
     <li>
@@ -118,7 +118,7 @@
     </li>
         <li>
         <strong>Optimization:</strong>
-        Adaptive Gradient Method (<a href="https://arxiv.org/abs/2412.02153">OPT 2024</a>),
+        Adaptive Gradient Method (<a href="https://openreview.net/forum?id=pJVxTOUCkw">CPAL 2025</a>),
         Extended Kalman Filter (<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/acs.3198">ACSP 2021</a>, <a href="https://proceedings.mlr.press/v120/abuduweili20a.html">L4DC 2020</a>)
     </li>
 <!--    <li>-->
